# drum-mapper

./: .rustfmt.toml  Cargo.toml  LICENSE  build.sh  bundler.toml  readme.md
.github/chglog/: release.yml
.github/workflows/: all.yml
bundler/: Cargo.toml
bundler/src/: main.rs
cli/: Cargo.toml
cli/src/: main.rs  tests.rs
drums/: Addictive Drums 2.mid  Addictive Drums 2.txt  Bogren Digital - Trivium Drums.mid  Bogren Digital - Trivium Drums.txt  EzDrummer 2.mid  EzDrummer 2.txt  EzDrummer 3.mid  EzDrummer 3.txt  GGD - OKW Architects.mid  GGD - OKW Architects.txt  GGD - OKW Metal.mid  GGD - OKW Metal.txt  SSD 5.mid  SSD 5.txt  Superior Drummer 3.mid  Superior Drummer 3.txt  Ugritone Drums.mid  Ugritone Drums.txt  sweep.mid
mappings/: Cargo.toml  build.rs
mappings/src/: lib.rs
nih_plug_egui/: Cargo.toml  README.md
nih_plug_egui/src/: editor.rs  lib.rs
plugin/: Cargo.toml  build.rs
plugin/src/: channel.rs  lib.rs  mappings.rs
print-notes/: Cargo.toml
print-notes/src/: main.rs
