[package]
name = "drum-mapper-cli"
version = "0.2.1"
edition = "2021"
authors = ["Taylan Gökkaya"]

[[bin]]
name = "drum-mapper"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.*"
clap = { version = "4.5.3", features = ["derive"] }
mappings = { path = "../mappings", features = ["clap"] }
midly = "0.5.3"
