[package]
name = "drum-mapper"
version = "0.3.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["gui"]
# Enables a graphical user interface
gui = ["dep:nih_plug_egui"]

[dependencies]
mappings = { path = "../mappings", features = ["nih_plug"] }
nih_plug_egui = { workspace = true, optional = true }
nih_plug = { workspace = true }
